--- a/.github/workflows/shiny-deploy.yaml
+++ b/.github/workflows/shiny-deploy.yaml
@@ -12,15 +12,25 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v2
 
       - uses: r-lib/actions/setup-pandoc@v1
 
-      - uses: r-lib/actions/setup-r@v1
-        with:
-          use-public-rspm: true
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v1
 
-      - uses: r-lib/actions/setup-renv@v1
+      - name: Cache Renv packages
+        uses: actions/cache@v2
+        with:
+          path: $HOME/.local/share/renv
+          key: r-${{ hashFiles('renv.lock') }}
+          restore-keys: r-
+
+      - name: Install packages
+        run: |
+          R -e 'install.packages("renv")'
+          R -e 'renv::restore()'
 
       - name: Install rsconnect
         run: install.packages("rsconnect")
