--- a/.github/workflows/shiny-deploy.yaml
+++ b/.github/workflows/shiny-deploy.yaml
@@ -8,7 +8,7 @@ name: shiny-deploy
 
 jobs:
   shiny-deploy:
-    runs-on: ubuntu-latest
+    runs-on: macOS-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
