--- a/.github/workflows/shiny-deploy.yaml
+++ b/.github/workflows/shiny-deploy.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - uses: r-lib/actions/setup-pandoc@v1
-
+      
       - name: Setup R
         uses: r-lib/actions/setup-r@v1
 
@@ -24,6 +24,9 @@ jobs:
         run: |
           R -e 'install.packages(c("remotes", "rsconnect", "shiny", "tidyverse", "cascsim", "imaginator", "DT", "SynthETIC", "data.table", "scales"))'
           R -e 'remotes::install_github("kasaai/simulationmachine")'
+
+      - name: Cache R packages 
+        uses: r-lib/actions/cache-r@master
 
       - name: Authorize and deploy app
         run: |
