--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,6 @@
 Package: dummy
+Version: 0.1.0
+Authors@R: person("Brian", "Fannin", email = "bfannin@casact.org", role = c("aut", "cre"))
 Depends:
   remotes, 
   rsconnect,
